[tool.poetry]
name = "subtrade"
version = "0.1.0"
description = "CLI for Subtrade - The open-source DTAO trading bot/platform"
authors = ["Maciej Kula <subtrade@mcjkula.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "subtrade" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ariadne = "^0.23.0"
fastapi = "^0.115.0"
flask = "^3.0.0"
matplotlib = "^3.9.0"
numpy = "^2.1.3"
pandas = "^2.2.0"
pillow = "^11.0.0"
pydantic = "^2.9.0"
strawberry-graphql = "^0.248.0"
uvicorn = "^0.32.0"

[tool.poetry.scripts]
subtrade = "subtrade.cli:main"
st = "subtrade.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
